--- a/localisation/english/DEN_USA/XNV_l_english.yml
+++ b/localisation/english/DEN_USA/XNV_l_english.yml
@@ -4,6 +4,7 @@
  XNV_ADJ: "Nevada"
  
  STATE_938: "Lower Nevada"
+ STATE_959: "Lower Idaho"
 
  VICTORY_POINTS_4607:0 "Carson City"
  VICTORY_POINTS_4799:0 "Las Vegas"
