salafist initial sub-branch and balance changes

--- a/localisation/english/DEN_USA/XAL_l_english.yml
+++ b/localisation/english/DEN_USA/XAL_l_english.yml
@@ -35,7 +35,8 @@
  XAL_anti_christian_rhetoric:0 "Popularize An Anti-Christian Rhetoric"
  XAL_callout_to_our_muslim_brothers:0 "A Callout To Our Muslim Brothers"
  XAL_mujahideen_callout:0 "§GForeign Mujahid Will Start To Join Our Ranks§!"
- XAL_mujahideen:0 "Foreign Mujahideen"
+ XAL_mujahideen:0 "Foreign Mujahideen Support"
+ XAL_mujahideen_2:0 "Foreign Mujahideen Support"
  XAL_a_strong_king:0 "A §RStrong§! King"
  XAL_a_generous_king:0 "A §GGenerous§! King"
  XAL_public_sector_investments:0 "Public Sector Investments"
@@ -54,4 +55,15 @@
  XAL_boost_loyalist_civilian:0 "Increase Popular Support For §LThe Monarchy§!"
  XAL_salafism_available_tt:0 "§7Salafist§! Influence Must Be Higher Than §G10§!"
  XAL_loyalism_available_tt:0 "§LLoyalist§! Influence Must Be Higher Than §G10§!"
+ al_abama_news.1.t:0 "Salafist Coup In Al-Abama"
+ al_abama_news.1.a:0 "An Interesting Development"
+ al_abama_news.1.desc:0 "Lmao George Wallace got cucked"
+ XAL_sharia_law:0 "Sharia Law"
+ XAL_purge_them_all:0 "Purge Them All"
+ XAL_enact_sharia:0 "Enact Sharia"
+ XAL_militarize_society:0 "Militarize The Society"
+ XAL_restrict_constitutional_rights:0 "Restrict Constitutional Rights"
+ XAL_increase_foreign_mujahid_support:0 "Lure In More Mujahid Fighters"
+ XAL_north_american_jihad:0 "North American Jihad"
+ XAL_jihad:0 "Jihad"
  
