zmieniono:       common/national_focus/XTN_focus.txt 	zmieniono:       localisation/english/DEN_USA/XTN_l_english.yml

--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -375,3 +375,36 @@ XTN_northern_statehood_desc:0 "After conquest of the north it is finally time to
 
 XTN_river_warplan:0 "River Wars"
 XTN_river_warplan_desc:0 "River warplan requires us to conquer remaining nothern states before Mississippi river."
+
+XTN_warplan_south:0 "Warplan South"
+XTN_warplan_south_desc:0 "South is rich in farmlands and fundamentalists. We will bring them freedom."
+
+XTN_strike_towards_fl:0 "Miami Road"
+XTN_strike_towards_fl_desc:0 "We won't stop till soviet soldiers will place their foot in miami."
+
+XTN_remove_islamic_threat:0 "Remove Islamic Threat"
+XTN_remove_islamic_threat_desc:0 "Religion is enemy of communist society. We must free oppressed people of the south."
+
+XTN_grant_statehood_csa:0 "Southern Statehood"
+XTN_grant_statehood_csa_desc:0 "We must welcome new states to the union!"
+
+XTN_southern_wars:0 "Southern Wars"
+XTN_southern_wars_desc:0 "We will cross Mississippi river and conquer lands of cowboys."
+
+XTN_push_coast:0 "Push Coast"
+XTN_push_coast_desc:0 "Time to arm ourselfs is over we will go all the way trough. We shall stand at the gates of San Francisco."
+
+XTN_draw_state_borders:0 "Draw State Borders"
+XTN_draw_state_borders_desc:0 "We have united most of USA. It is time to draw borders and make our rule legitimate."
+
+XTN_2nd_river_wars:0 "2nd River Wars"
+XTN_2nd_river_wars_desc:0 "We have passed Mississippi river now it's time to remove remaining resistance."
+
+XTN_operation_omaha:0 "Operation Omaha"
+XTN_operation_omaha_desc:0 "We will drive out capitalists outta desert."
+
+XTN_to_victory:0 "To Victory!"
+XTN_to_victory_desc:0 "Last rebel held provinces are no match to us!"
+
+XTN_southern_campaign:0 "Southern Campaign"
+XTN_southern_campaign_desc:0 "Smirnov's idea is to unite the south to liberate farmers from their cotton plantations."
