Will fix characters tmr peace

--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -408,3 +408,6 @@ XTN_to_victory_desc:0 "Last rebel held provinces are no match to us!"
 
 XTN_southern_campaign:0 "Southern Campaign"
 XTN_southern_campaign_desc:0 "Smirnov's idea is to unite the south to liberate farmers from their cotton plantations."
+
+XTN_unite_carolina:0 "Unite Carolina"
+XTN_unite_carolina:0 " "
