Some Utah Minor Changes

--- a/localisation/english/DEN_USA/XUT_l_english.yml
+++ b/localisation/english/DEN_USA/XUT_l_english.yml
@@ -12,6 +12,7 @@
  
  four_year_plan_tooltip:0 "§YThis focus will enable the 4 Year Plan.§!"
  purge_mormons_tooltip:0 "§RThis decision will have unintended consequences...§!"
+ fga_tooltip:0 "§YThis focus will enable the Fourth Great Awakening.§!"
  
  XUT_general_conference:0 "The General Conference"
  XUT_general_conference_desc:0 "Every year, the top figures in the LDS Church gather in the Salt Lake Tabernacle to discuss the future of the church. This is the first conference in an independent Utah. There are many different calls for action, but only one can prevail."
@@ -33,3 +34,30 @@
  XUT_guaruntee_rights_desc:0 "Religion is an inherent part of Utah. By protecting it, not only is it protecting the church, but it is also protecting the Utah identity."
  XUT_gender_equality:0 "Implement Gender Equality"
  XUT_gender_equality_desc:0 "Despite its controversial nature just a decade ago, Utah needs every available citizen to contribute what they can. Every wife in the kitchen could be a soldier in arms."
+ XUT_mobilize_the_loyalists:0 "Mobilize the Loyalists"
+ XUT_mobilize_the_loyalists_desc:0 "In our moment of crisis, we need every man on deck to help our cause. Mormonism delenda est!"
+ XUT_raid_old_stockpiles:0 "Raid Old Stockpiles"
+ XUT_raid_old_stockpiles_desc:0 "Guns are running low. To temporarily fill this deficit, we can dig up some old guns from old stockpiles."
+ XUT_dig_trenches:0 "Dig Trenches"
+ XUT_dig_trenches_desc:0 "Even with our best men, it is wise to have a fallback line in case things turn south."
+ XUT_open_up_abandoned_factories:0 "Open Up Abandoned Factories"
+ XUT_open_up_abandoned_factories_desc:0 "Our industry must be reinvigorated. Many factories had been shut down in recent years, but by using government funds to open them up, the total production can increase significantly."
+ XUT_sniff_out_traitors:0 "Sniff Out Traitors"
+ XUT_sniff_out_traitors_desc:0 "Enemies can appear from both outward and within. It is best to set up an agency to keep all grounds covered."
+ XUT_civil_war_victory:0 "Civil War Victory"
+ XUT_civil_war_victory_desc:0 "We have fought long and hard against the tyranny of the corrupt church. Long live the people of Utah!"
+ XUT_red_state_in_the_west:0 "Red State in the West"
+ XUT_red_state_in_the_west_desc:0 "We are surrounded by capitalist enemies. We must be the voice of the people. Of those who are oppressed and cannot fight for themselves."
+ XUT_propaganda_across_borders:0 "Propaganda Across Borders"
+ XUT_propaganda_across_borders_desc:0 "Many are still unsure of our great project. We must convince them to align with our system."
+ XUT_local_contacts:0 "Establish Local Contacts"
+ XUT_local_contacts_desc:0 "The key to revolution is to claim support on the grassroots level."
+ XUT_launch_uprisings:0 "Launch Uprisings"
+ XUT_launch_uprisings_desc:0 "The governments of our neighbors refuse to listen to their own citizens. It is time they rise up and unchain themselves."
+ XUT_integrate_union:0 "Integrate the Unions"
+ XUT_integrate_union_desc:0 "Our neighbors have similar ideas and customs as we do. We are economically tied and cultrally aligned. It only makes sense to unite under the same flag."
+ XUT_sweep_the_rest:0 "Sweep the Rest"
+ XUT_sweep_the_rest_desc:0 "Due to the tyranny of the government, the people have been strangled into a chokehold. We must liberate these people at all costs."
+ 
+ XUT_fourth_great_awakening:0 "The Fourth Great Awakening"
+ XUT_fourth_great_awakening_desc:0 "Our forefathers have enlightened the people to limited success. Now with the torch in our hands, we can achieve even larger greatness."
